# learning-ros2

./: .gitignore  Dockerfile  README.md  docker-compose.yml  service.py  servo_no_jitter.py  source_me.sh  todo.txt  useful_commands.txt  user.py  user2.py
.devcontainer/: Dockerfile  devcontainer.json
gui/: Dockerfile
src/activity2/: package.xml  setup.cfg  setup.py
src/activity2/activity2/: number_publisher.py
src/activity4/: package.xml  setup.cfg  setup.py
src/activity4/activity4/: battery.py  led_panel.py
src/activity4_interfaces/: CMakeLists.txt  package.xml
src/activity4_interfaces/msg/: LedState.msg
src/alen/: package.xml  setup.cfg  setup.py
src/alen/alen/: command_input.py
src/cpp_activity2/: CMakeLists.txt  package.xml
src/cpp_activity2/src/: number_counter.cpp
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/src/: add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  add_two_ints_server.cpp  hw_status_publisher.cpp  my_first_node.cpp  robot_news_station.cpp  smartphone.cpp
src/my_py_pkg/: setup.py
src/my_py_pkg/my_py_pkg/: add_two_ints_client.py  add_two_ints_client_no_oop.py  add_two_ints_server.py  hw_status_publisher.py  (+2 more)
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_interfaces/: CMakeLists.txt  package.xml
src/rpi_test/: package.xml  setup.cfg  setup.py
src/turtlesim_project/: package.xml  setup.cfg  setup.py
src/turtlesim_project_bringup/: CMakeLists.txt  package.xml
src/turtlesim_project_interfaces/: CMakeLists.txt  package.xml
templates/: node_template.cpp  node_template.py
(+11 files in other folders)
